@@ -1,4 +1,4 @@
-# $NetBSD: mi,v 1.1125 2016/06/01 08:17:39 pgoyette Exp $
+# $NetBSD: mi,v 1.1126 2016/06/04 15:27:11 agc Exp $
 #
 # Note:	Don't delete entries from here - mark them as "obsolete" instead,
 #	unless otherwise stated below.
@@ -911,6 +911,7 @@
 ./usr/bin/string2key				base-krb5-bin		kerberos
 ./usr/bin/su					base-util-bin
 ./usr/bin/sum					base-util-bin
+./usr/bin/sys_info				base-util-bin
 ./usr/bin/sysstat				base-util-bin
 ./usr/bin/systat				base-util-bin
 ./usr/bin/tabs					base-util-bin
