@@ -1,0 +1,8 @@
+# $NetBSD: Makefile,v 1.1 2016/06/04 15:27:11 agc Exp $
+
+SCRIPTS=	sys_info
+SCRIPTSDIR=	/usr/bin
+MAN=		sys_info.1
+CLEANFILES+=	${SCRIPTS}
+
+.include <bsd.prog.mk>
