@@ -1,0 +1,52 @@
+The sys_info script is a small script which will show the version
+information for installed utilities.  It also works on the kernel, and
+on most libraries.
+
+Its use is as follow:
+
+	[19:41:13] agc@netbsd-002 ...external/bsd/sys_info [4568] > ./sys_info -a
+	awk-20121220
+	bind-9.10.3pl3
+	bzip2-1.0.6
+	calendar-20160601
+	ftpd-20110904
+	g++-4.8.5
+	gcc-4.8.5
+	grep-2.5.1anb1
+	gzip-20150113
+	bozohttpd-20151231
+	NetBSD-7.99.26
+	netpgp-3.99.17
+	netpgpverify-20160214
+	ntp-4.2.8pl5
+	openssl-1.0.1r
+	sqlite3-3.12.2
+	openssh-7.1
+	opensshd-7.1
+	tcsh-6.19.00
+	xz-5.2.1
+	[19:41:20] agc@netbsd-002 ...external/bsd/sys_info [4569] > ./sys_info ntp ssh netpgp
+	ntp-4.2.8pl5
+	openssh-7.1
+	netpgp-3.99.17
+	[19:41:31] agc@netbsd-002 ...external/bsd/sys_info [4570] > ./sys_info ntp ssh netbsd
+	ntp-4.2.8pl5
+	openssh-7.1
+	NetBSD-7.99.26
+	[19:41:38] agc@netbsd-002 ...external/bsd/sys_info [4571] >
+
+The -a option can be given to the script to print out the information
+on all known components.
+
+The sys_info script also works on libraries, returning their
+"versions" as given by the shared object version numbers.
+
+	[19:45:06] agc@netbsd-002 ...external/bsd/sys_info [4572] > ./sys_info libevent libXfont libc netbsd
+	libevent-4.0
+	libXfont-3.0
+	libc-12.200
+	NetBSD-7.99.26
+	[19:45:27] agc@netbsd-002 ...external/bsd/sys_info [4573] >
+
+Alistair Crooks
+Wed Jun  1 19:44:01 PDT 2016
