@@ -1,4 +1,4 @@
-# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.2169 $>
+# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.2170 $>
 #
 #
 # [Note: This file does not mention every change made to the NetBSD source tree.
@@ -316,3 +316,5 @@ Changes from NetBSD 7.0 to NetBSD 8.0:
 		there [christos 20160527]
 	zoneinfo: Import tzdata2016d. [agc 20160531]
 	ntp: Import ntp 4.2.8p8. [christos 20160603]
+	sys_info: Import a script to return version information for system
+		libraries and utilities [agc 20160604]
